<resources>
    <string name="app_name">My Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="cnf_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="info">\t\tसांगोला हा भारताच्या महाराष्ट्र राज्यातील सोलापूर जिल्ह्याचा एक तालुका आहे.\n
    \n \t\t सांगोला तालुका शहर महानगरपालिका ही महाराष्ट्रातील दुसर्‍या क्रमांकाची जुनी मनपा असून ती १८५५ साली स्थापन झाली. एके काळी भरपूर सोने असलेला हा भाग "सांगोले सोन्याचे" म्हणुन ओळखला जायचा. हे नाव सहा - इंगोले आडनावाच्या - लोकांवरुन पडले अशी आख्यायिका आहे.\n
    \n \t\tसांगोला : महाराष्ट्र राज्याच्या सोलापूर जिल्ह्यातील याच नावाच्या तालुक्याचे ठिकाण. लोकसंख्या ३४,१८८ (२०११). ते सोलापूर व पंढरपूरच्या नैऋर्त्येस अनुक्रमे ८२ व ३१ किमी. वर सांगोला किल्ल्याच्या पायथ्याशी वसले आहे. दक्षिणमध्य रेल्वेच्या कुर्डवाडी-मिरज लोह-मार्गावरील हे एक स्थानक आहे. येथील किल्ला आदिलशाही काळात (१४८९–१६८६) बांधला गेला असून तत्कालीन कागदोपत्री सांगोला एक भरभराटीचे स्थान मानले जाई. त्यामुळे त्याची ख्याती ‘सोन्याचे सांगोला’ अशी होती. आदिलशाहीच्या पतनानंतर (१६८६) मोगलांच्या आधिपत्याखाली किल्ला आला व औरंगजेबाच्या मृत्यूनंतर (१७०७) छ. शाहूंनी (१७०७–४९) यांच्या अखत्यारीत हे शहर आले. छ. शाहूंनी मरतेसमयी दोन सनदांद्वारे राज्याचा कारभार पेशवे बाळाजी बाजीराव यांकडे सोपविला. त्यानंतर १७५० मध्ये महाराणी ताराबाईंच्या यमाजी शिवदेव नावाच्या सेवकाने सांगोल्याचा किल्ला हस्तगत करून बाळाजींच्या विरूद्घ बंड केले. ते सदाशिवराव भाऊने नेस्तानाबूत करून त्यावर पुन्हा पेशव्यांची सत्ता प्रस्थापित केली. दुसऱ्या बाजीरावाच्या कारकीर्दीत (१७९५–१८१८) होळकरांच्या पठाण पलटणीने १८०२ मध्ये सांगोला शहरावर हल्ला करून ते उद्ध्वस्त केले. त्यात शहराचे अतोनात नुकसान झाले. पेशवाईच्या अस्तानंतर ते इंग्रजी अंमलाखाली भारतीय स्वातंत्र्यापर्यंत होते. शहरात नगरपरिषदेमार्फत (स्था.१८५५–५६) पाणी, आरोग्य, स्वच्छता, जलनिःसारण इत्यादींचे व्यवस्थापन होते. येथे प्राथमिक, माध्यमिक शाळा, सांगोला महाविद्यालय, विज्ञान महाविद्यालय या शैक्षणिक संस्था असून माता-बालक उत्कर्ष प्रतिष्ठान ही स्वयंसेवी संस्था माता-बालके यांच्या विकासार्थ कार्यरत आहे. किल्ल्यात काही शासकीय कार्यालये आहेत. सांगोले तालुका सहकारी सूत गिरणी उत्तम धाग्यासाठी प्रसिद्घ आहे. वासाहतिक वास्तुशैलीची बुद्घिहाळ इमारत, गोलघुट, अंबिका देवी मंदिर, सांगोला किल्ला ही येथील प्रसिद्घ स्थळे होत. उच्च प्रतीच्या डाळिंबांच्या उत्पन्नासाठी हे ख्यातनाम असून त्यांची परदेशांतही निर्यात होते. दर रविवारी येथे जनावरांचा मोठा बाजार भरतो. येथील खिलार जातीचे बैल प्रसिद्घ आहेत\n
    \n \t\t राज्यातील सर्वात मोठा बैलाचा बाजार भरतो . तो रविवारी भरत असतो . तसेच कमी पाण्या वर आधारित शेती कशी करायची याचे उत्तम उदारण म्हणजे सांगोला तालुका आहे . सर्वात विकसित तालुका म्हणते तर चालेल
    \n \n \n </string>
    <string name="police">POLICE</string>
    <string name="fire_brigade">FIRE BRIGADE</string>
    <string name="ambulance">AMBULANCE</string>
    <string name="annoncement">Announcement</string>

</resources>
