<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="250dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/un"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/pw"
        android:hint="@string/password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#7A332F"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/not_registered" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="83dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:text="@string/register"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

