<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="180dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/un"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/pw"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/pw"
        android:hint="@string/cnf_password" />

    <EditText
        android:id="@+id/edittext_contact_number"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/cn"
        android:hint="Contact Number" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#7A332F"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:text="Already Registerd" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="83dp"
            android:layout_height="25dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:text="@string/login"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>